# heimdall

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO
.github/workflows/: build.yml  cmake.yml
Formats/: SigprocFile.cpp  giant_maker.cpp
applications/: Candidates.cpp  candidate_profiler.cpp  coincidencer.cpp  fil2pgm.cpp  generate_dmlist.cpp  heimdall.cpp
cmake/: Finddedisp.cmake
include/data_types/: DataSource.hpp  SigprocFile.hpp  candidates.hpp  data_source.hpp  filterbank.hpp  header.hpp  write_time_series.hpp
include/hd/: clean_filterbank_rfi.hpp  default_params.hpp  error.hpp  find_giants.hpp  get_rms.hpp  label_candidate_clusters.hpp  matched_filter.hpp  maths.hpp  measure_bandpass.hpp  median_filter.hpp  merge_candidates.hpp  params.hpp  pipeline.hpp  pipeline_types.hpp  remove_baseline.hpp  strided_range.hpp  types.hpp
include/kernels/: are_coincident.cuh  cached_allocator.cuh
include/utils/: exceptions.hpp  parse_command_line.hpp  stopwatch.hpp
src/: clean_filterbank_rfi.cu  default_params.cpp  error.cpp  find_giants.cu  get_rms.cu  label_candidate_clusters.cu  matched_filter.cu  measure_bandpass.cu  median_filter.cu  merge_candidates.cu  parse_command_line.cpp  pipeline.cu  remove_baseline.cu
tests/: CMakeLists.txt  outtakes.cpp
